crates/tree-sitter-vixen/grammar.js
    document: ($) => optional($.statement_list),

    statement_list: ($) => seq($.statement, repeat(seq(";", $.statement)), optional(";")),

    line_comment: ($) => token(seq("//", /[^\n]*/)),

    block_comment: ($) =>
      seq(
        "/*",
        repeat(
          choice(
            /[^/*]+/,
            /\/[^*]/,
            /\*[^/]/,
            $.block_comment,
          ),
        ),
        "*/",
      ),

    attribute_list: ($) => repeat1($.attribute),

    attribute: ($) =>
      seq(
        "@",
        field("name", $.lower_identifier),
        optional(field("arguments", $.attribute_arguments)),
      ),

    function_declaration: ($) =>
      seq(
        optional(field("attributes", $.attribute_list)),
        "fn",
        field("name", $.lower_identifier),
        optional(field("type_parameters", $.type_parameter_list)),
        field("parameters", $.parameter_clause),
        optional(field("return_type", $.return_type)),
        optional(field("body", $.block)),
      ),

    struct_field_declaration: ($) =>
      seq(
        optional(field("attributes", $.attribute_list)),
        field("name", $.lower_identifier),
        ":",
        field("type", $.type_expression),
        optional(
          seq(
            "=",
            field(
              "value",
              choice(
                $.struct_type_definition,
                $.enum_type_definition,
                $.newtype_type_definition,
                $.expression,
              ),
            ),
          ),
        ),
      ),

    sum_type_definition: ($) => prec.left(seq($.type_expression, repeat1(seq("|", $.type_expression)))),

    binding_statement: ($) =>
      seq(
        field("pattern", $.binding_pattern),
        optional(seq(":", field("type", $.type_expression))),
        "=",
        field("value", $.expression),
      ),

    parameter_clause: ($) => seq("(", optional(commaSep1($.parameter_item)), optional(","), ")"),

    parameter: ($) => seq(field("pattern", $.binding_pattern), ":", field("type", $.type_expression)),

    keyword_parameter: ($) =>
      seq(
        field("name", $.lower_identifier),
        ":",
        field("type", $.type_expression),
        optional(seq("=", field("default", $.expression))),
      ),

    return_type: ($) => seq("->", $.type_expression),

    type_parameter_list: ($) =>
      seq("[", optional(commaSep1($.type_parameter)), optional(","), "]"),

    type_parameter: ($) => $.upper_identifier,

    tuple_type: ($) =>
      seq("(", commaSep1($.type_expression), optional(","), ")"),

    function_type: ($) =>
      seq(
        "Fn",
        "(",
        optional(commaSep1($.type_expression)),
        optional(","),
        ")",
        optional($.capability_list),
        "->",
        $.type_expression,
      ),

    capability_list: ($) => repeat1($.capability_tag),

    capability_tag: ($) => seq("#", $.lower_identifier),

    type_path: ($) =>
      prec.left(
        seq(
          field("head", $.upper_identifier),
          repeat(seq(".", field("member", $.upper_identifier))),
          optional(field("type_arguments", $.type_arguments)),
        ),
      ),

    type_arguments: ($) => seq("[", optional(commaSep1($.type_expression)), optional(","), "]"),

    binding_pattern: ($) =>
      choice(
        $.wildcard_pattern,
        $.lower_identifier,
        $.tuple_pattern,
        $.struct_pattern,
        $.array_pattern,
        $.parenthesized_pattern,
      ),

    parenthesized_pattern: ($) => seq("(", $.pattern, ")"),

    wildcard_pattern: ($) => "_",

    literal_pattern: ($) =>
      choice(
        $.integer_literal,
        $.float_literal,
        $.boolean_literal,
        $.string_literal,
      ),

    struct_pattern: ($) =>
      seq("{", optional(commaSep1($.struct_pattern_field)), optional(","), "}"),

    struct_pattern_field: ($) =>
      choice(
        seq(field("name", $.lower_identifier), ":", field("pattern", $.pattern)),
        field("name", $.lower_identifier),
        prec(20, ".."),
      ),

    array_pattern: ($) =>
      seq("[", optional(commaSep1($.array_pattern_item)), optional(","), "]"),

    array_pattern_item: ($) =>
      choice($.pattern, $.array_rest_pattern),

    array_rest_pattern: ($) => prec(20, choice("..", seq("..", $.lower_identifier))),

    primary_expression: ($) =>
      choice(
        $.identifier_expression,
        $.integer_literal,
        $.float_literal,
        $.boolean_literal,
        $.string_literal,
        $.interpolated_string,
        $.array_expression,
        $.map_expression,
        $.tuple_expression,
        $.parenthesized_expression,
        $.block,
        $.import_expression,
        $.fail_expression,
        $.dollar_identifier,
      ),

    identifier_expression: ($) => choice($.lower_identifier, $.upper_identifier),

    integer_literal: ($) => /\d(?:[\d_]*\d)?/,

    boolean_literal: ($) => choice("true", "false"),

    string_literal: ($) =>
      seq(
        "\"",
        repeat(choice($.escape_sequence, alias(token.immediate(/[^"\\\n]+/), $.string_content))),
        "\"",
      ),

    interpolated_string: ($) =>
      seq(
        "`",
        repeat(
          choice(
            $.escape_sequence,
            alias(token.immediate(/[^`\\$]+/), $.string_content),
            alias(token.immediate(/\$/), $.string_content),
            $.string_interpolation,
          ),
        ),
        "`",
      ),

    string_interpolation: ($) => seq("${", $.expression, "}"),

    block: ($) => seq("{", optional($.statement_list), "}"),

    spread_expression: ($) => prec.right(20, seq("..", $.expression)),

    update_body: ($) => seq("{", optional(commaSep1($.update_field)), optional(","), "}"),

    update_field: ($) =>
      choice(
        seq(field("path", $.field_path), ":", field("value", $.expression)),
        seq(":", field("shorthand", $.field_path), "with", field("value", $.update_body)),
        seq("..", field("spread", $.expression)),
      ),

    field_path: ($) =>
      seq($.lower_identifier, repeat(seq(".", $.lower_identifier))),

    call_expression: ($) =>
      prec.left(PREC.call, seq(field("function", $.expression), field("arguments", $.argument_list))),

    argument_list: ($) => seq("(", optional(commaSep1($.argument)), optional(","), ")"),

    argument: ($) =>
      choice(
        $.keyword_argument,
        $.argument_placeholder,
        $.spread_expression,
        $.expression,
      ),

    keyword_argument: ($) =>
      seq(field("name", $.lower_identifier), ":", field("value", $.expression)),

    argument_placeholder: ($) => prec(20, ".."),

    index_expression: ($) =>
      prec.left(PREC.call, seq(field("value", $.expression), "[", field("index", $.expression), "]")),

    field_expression: ($) =>
      prec.left(
        PREC.field,
        seq(
          field("value", $.expression),
          ".",
          field("field", choice($.lower_identifier, $.upper_identifier, $.tuple_index)),
        ),
      ),

    tuple_index: ($) => /_[0-9]+/,

    partial_application_expression: ($) =>
      prec.right(seq("@", field("function", $.expression), field("arguments", $.argument_list))),

    match_expression: ($) =>
      seq("match", field("value", $.expression), "{", optional(commaSep1($.match_arm)), optional(","), "}"),

    match_arm: ($) =>
      seq(
        field("pattern", $.pattern),
        optional(seq("if", field("guard", $.expression))),
        "=>",
        field("value", $.expression),
      ),

    with_expression: ($) =>
      prec.right(PREC.with, seq(field("value", $.expression), "with", field("changes", $.update_body))),

    lower_identifier: ($) => /[a-z_][A-Za-z0-9_]*/,

    upper_identifier: ($) => /[A-Z][A-Za-z0-9_]*/,
  },
});

function commaSep1(rule) {
  return seq(rule, repeat(seq(",", rule)));
}
