crates/tree-sitter-vixen/test/corpus/edge_cases_more.txt
================================================================================
Empty document
================================================================================



--------------------------------------------------------------------------------

(document)

================================================================================
Attribute without arguments
================================================================================

#[untagged]
enum Content {
  struct Text,
}

--------------------------------------------------------------------------------

(document
  (enum_declaration
    (attribute_list
      (attribute
        (attribute_entry
          (lower_identifier))))
    (upper_identifier)
    (enum_declaration_body
      (enum_variant_declaration
        (upper_identifier)))))

================================================================================
Multiple attributes on declaration
================================================================================

#[tag = "type"]
#[rename_all = "kebab-case"]
enum Shape {
  struct Circle,
}

--------------------------------------------------------------------------------

(document
  (enum_declaration
    (attribute_list
      (attribute
        (attribute_entry
          (lower_identifier)
          (primary_expression
            (string_literal
              (string_content)))))
      (attribute
        (attribute_entry
          (lower_identifier)
          (primary_expression
            (string_literal
              (string_content))))))
    (upper_identifier)
    (enum_declaration_body
      (enum_variant_declaration
        (upper_identifier)))))

================================================================================
Attribute on struct field
================================================================================

struct ApiResponse {
  #[rename = "status_code"]
  status: U64,
}

--------------------------------------------------------------------------------

(document
  (struct_declaration
    (upper_identifier)
    (struct_declaration_body
      (struct_field_declaration
        (attribute_list
          (attribute
            (attribute_entry
              (lower_identifier)
              (primary_expression
                (string_literal
                  (string_content))))))
        (lower_identifier)
        (slot_type
          (type_primary
            (type_path
              (upper_identifier))))))))

================================================================================
Line comment between top level items
================================================================================

struct A
// comment
struct B

--------------------------------------------------------------------------------

(document
  (struct_declaration
    (upper_identifier))
  (line_comment)
  (struct_declaration
    (upper_identifier)))

================================================================================
Block comment between top level items
================================================================================

struct A
/* hello */
struct B

--------------------------------------------------------------------------------

(document
  (struct_declaration
    (upper_identifier))
  (block_comment)
  (struct_declaration
    (upper_identifier)))

================================================================================
Anonymous inline struct slot
================================================================================

struct Config {
  package: struct {
    name: String,
  },
}

--------------------------------------------------------------------------------

(document
  (struct_declaration
    (upper_identifier)
    (struct_declaration_body
      (struct_field_declaration
        (lower_identifier)
        (slot_type
          (inline_type_declaration
            (inline_struct_declaration
              (struct_declaration_body
                (struct_field_declaration
                  (lower_identifier)
                  (slot_type
                    (type_primary
                      (type_path
                        (upper_identifier)))))))))))))

================================================================================
Anonymous inline type alias slot
================================================================================

struct Config {
  entry: type = Blob | Tree,
}

--------------------------------------------------------------------------------

(document
  (struct_declaration
    (upper_identifier)
    (struct_declaration_body
      (struct_field_declaration
        (lower_identifier)
        (slot_type
          (inline_type_declaration
            (inline_type_alias_declaration
              (type_alias_value
                (sum_type_definition
                  (type_primary
                    (type_path
                      (upper_identifier)))
                  (type_primary
                    (type_path
                      (upper_identifier))))))))))))

================================================================================
Anonymous inline newtype slot
================================================================================

struct Config {
  hash: newtype of String,
}

--------------------------------------------------------------------------------

(document
  (struct_declaration
    (upper_identifier)
    (struct_declaration_body
      (struct_field_declaration
        (lower_identifier)
        (slot_type
          (inline_type_declaration
            (inline_newtype_declaration
              (type_primary
                (type_path
                  (upper_identifier))))))))))

================================================================================
Keyword only call
================================================================================

fn value() -> String {
  connect where { host: "localhost", port: 8080 }
}

--------------------------------------------------------------------------------

(document
  (function_declaration
    (lower_identifier)
    (parameter_clause)
    (return_type
      (type_primary
        (type_path
          (upper_identifier))))
    (block
      (statement_list
        (keyword_application_expression
          (primary_expression
            (identifier_expression
              (lower_identifier)))
          (record_expression
            (record_field
              (lower_identifier)
              (primary_expression
                (string_literal
                  (string_content))))
            (record_field
              (lower_identifier)
              (primary_expression
                (integer_literal)))))))))

================================================================================
Unit pattern
================================================================================

fn value(v: ()) -> Bool {
  match v {
    () => true,
  }
}

--------------------------------------------------------------------------------

(document
  (function_declaration
    (lower_identifier)
    (parameter_clause
      (parameter_list
        (parameter
          (binding_pattern
            (lower_identifier))
          (slot_type
            (type_primary
              (unit_type))))))
    (return_type
      (type_primary
        (type_path
          (upper_identifier))))
    (block
      (statement_list
        (match_expression
          (primary_expression
            (identifier_expression
              (lower_identifier)))
          (match_arm
            (unit_pattern)
            (primary_expression
              (boolean_literal))))))))

================================================================================
Parenthesized pattern
================================================================================

fn value(v: U64) -> Bool {
  match v {
    (0) => true,
    _ => false,
  }
}

--------------------------------------------------------------------------------

(document
  (function_declaration
    (lower_identifier)
    (parameter_clause
      (parameter_list
        (parameter
          (binding_pattern
            (lower_identifier))
          (slot_type
            (type_primary
              (type_path
                (upper_identifier)))))))
    (return_type
      (type_primary
        (type_path
          (upper_identifier))))
    (block
      (statement_list
        (match_expression
          (primary_expression
            (identifier_expression
              (lower_identifier)))
          (match_arm
            (parenthesized_pattern
              (literal_pattern
                (integer_literal)))
            (primary_expression
              (boolean_literal)))
          (match_arm
            (wildcard_pattern)
            (primary_expression
              (boolean_literal))))))))

================================================================================
Unnamed array rest pattern
================================================================================

fn value(items: Array[String]) -> String {
  match items {
    [first, ..] => first,
    [] => "empty",
  }
}

--------------------------------------------------------------------------------

(document
  (function_declaration
    (lower_identifier)
    (parameter_clause
      (parameter_list
        (parameter
          (binding_pattern
            (lower_identifier))
          (slot_type
            (type_primary
              (type_path
                (upper_identifier)
                (type_arguments
                  (type_primary
                    (type_path
                      (upper_identifier))))))))))
    (return_type
      (type_primary
        (type_path
          (upper_identifier))))
    (block
      (statement_list
        (match_expression
          (primary_expression
            (identifier_expression
              (lower_identifier)))
          (match_arm
            (array_pattern
              (array_pattern_item
                (lower_identifier))
              (array_pattern_item
                (array_rest_pattern)))
            (primary_expression
              (identifier_expression
                (lower_identifier))))
          (match_arm
            (array_pattern)
            (primary_expression
              (string_literal
                (string_content)))))))))

================================================================================
Tuple index field access
================================================================================

fn value(pair: (U64, String)) -> U64 {
  pair._0
}

--------------------------------------------------------------------------------

(document
  (function_declaration
    (lower_identifier)
    (parameter_clause
      (parameter_list
        (parameter
          (binding_pattern
            (lower_identifier))
          (slot_type
            (type_primary
              (tuple_type
                (type_primary
                  (type_path
                    (upper_identifier)))
                (type_primary
                  (type_path
                    (upper_identifier)))))))))
    (return_type
      (type_primary
        (type_path
          (upper_identifier))))
    (block
      (statement_list
        (field_expression
          (primary_expression
            (identifier_expression
              (lower_identifier)))
          (tuple_index))))))

================================================================================
Function type with no arguments
================================================================================

fn value(f: Fn() -> ()) -> () {
  f ()
}

--------------------------------------------------------------------------------

(document
  (function_declaration
    (lower_identifier)
    (parameter_clause
      (parameter_list
        (parameter
          (binding_pattern
            (lower_identifier))
          (slot_type
            (type_primary
              (function_type
                (type_primary
                  (unit_type))))))))
    (return_type
      (type_primary
        (unit_type)))
    (block
      (statement_list
        (application_expression
          (primary_expression
            (identifier_expression
              (lower_identifier)))
          (primary_expression
            (unit_expression)))))))

================================================================================
Optional dotted type path
================================================================================

fn value(layout: Dashboard.Layout?) -> Dashboard.Layout? {
  layout
}

--------------------------------------------------------------------------------

(document
  (function_declaration
    (lower_identifier)
    (parameter_clause
      (parameter_list
        (parameter
          (binding_pattern
            (lower_identifier))
          (slot_type
            (optional_type
              (type_primary
                (type_path
                  (upper_identifier)
                  (upper_identifier))))))))
    (return_type
      (optional_type
        (type_primary
          (type_path
            (upper_identifier)
            (upper_identifier)))))
    (block
      (statement_list
        (primary_expression
          (identifier_expression
            (lower_identifier)))))))

================================================================================
Generic local function
================================================================================

fn value() -> U64 {
  fn first[T](items: Array[T]) -> T {
    items[0]
  };
  first xs
}

--------------------------------------------------------------------------------

(document
  (function_declaration
    (lower_identifier)
    (parameter_clause)
    (return_type
      (type_primary
        (type_path
          (upper_identifier))))
    (block
      (statement_list
        (function_declaration
          (lower_identifier)
          (type_parameter_list
            (type_parameter
              (upper_identifier)))
          (parameter_clause
            (parameter_list
              (parameter
                (binding_pattern
                  (lower_identifier))
                (slot_type
                  (type_primary
                    (type_path
                      (upper_identifier)
                      (type_arguments
                        (type_primary
                          (type_path
                            (upper_identifier))))))))))
          (return_type
            (type_primary
              (type_path
                (upper_identifier))))
          (block
            (statement_list
              (index_expression
                (primary_expression
                  (identifier_expression
                    (lower_identifier)))
                (primary_expression
                  (integer_literal))))))
        (application_expression
          (primary_expression
            (identifier_expression
              (lower_identifier)))
          (primary_expression
            (identifier_expression
              (lower_identifier))))))))
